create addTag function and deleteTag function  in script file and call addTag function in button within index file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <p>Project 1</p>
                     <p>Project 2</p>
                 </div>
-                <div class="menu-item" id="menu-tags" onclick="toggleMenu('tags')">Tags <button class="add-button" title="Add New Tag">+</button> <span>▶</span></div>
+                <div class="menu-item" id="menu-tags" onclick="toggleMenu('tags')">Tags <button class="add-button" onclick="addTag()" title="Add New Tag">+</button> <span>▶</span></div>
                 <div class="submenu" id="tags">
                     
                     <p>Tag 1 <button>✏️</button> <button>❌</button></p>
